# transformer-impl

./: README.md  pyproject.toml
src/transformer_impl/: __init__.py  attention.py  embeddings.py  layers.py  masks.py  model.py
