[project]
name = "transformer-impl"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "oawilke", email = "246046577+oawilke@users.noreply.github.com" }
]
requires-python = ">=3.12"
dependencies = [
    "huggingface-hub>=1.7.1",
    "ipywidgets>=8.1.8",
    "matplotlib>=3.10.8",
    "pandas>=3.0.1",
    "pyarrow>=23.0.1",
    "regex>=2026.2.28",
    "sacrebleu>=2.6.0",
    "sentencepiece>=0.2.1",
    "torch>=2.10.0",
    "torchaudio>=2.10.0",
    "torchvision>=0.25.0",
    "tqdm>=4.67.3",
]

[project.scripts]
transformer-impl = "transformer_impl:main"

[build-system]
requires = ["uv_build>=0.9.2,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "ipykernel>=7.2.0",
]
